--- a/text-elements/pre-textuais/resumo.tex
+++ b/text-elements/pre-textuais/resumo.tex
@@ -9,7 +9,7 @@
 
 O século XXI é marcado pela imersão da sociedade no meio tecnológico. Tarefas simples, como diálogos e pesquisas, e complexas, como operações bancárias, passam mais ou menos intensamente pelo uso da internet. Assim, constata-se que esse mecanismo tornou-se um enorme aliado do ser humano. Todavia, infelizmente, a não inserção nessa nova era ainda é uma realidade para muitos aspectos do cotidiano. Nesse contexto, vem à tona a falta de tecnologia empregada no ramo de transportes, situação que compromete profundamente os trabalhadores da área, em especial os motoboys. Esses profissionais, além de lidarem com o estresse do trânsito, gastam grande parte de seu tempo organizando previamente a rota que será utilizada para o lote de entregas, e, ainda, correm o risco de não fazê-la de modo adequado. Como consequência, muitas vezes percorrem bastantes quilômetros desnecessários e deixam de realizar outras entregas, que potencialmente se converteriam em um retorno financeiro mais satisfatório ao fim do mês. Tendo em vista tal circunstância, e ciente da importância de cada segundo para esses indivíduos, o presente trabalho propõe uma aplicação web de gerenciamento de pedidos e de seus destinos finais, compartilhados por meio de uma API de troca de dados (disponibilizada pelo sistema de vendas já implantado operando plenamente no estabelecimento), pela utilização de ferramentas como: Laravel e Google Maps, a fim de oferecer uma otimização de tempo para os envolvidos nesse processo, evitando congestionamentos e quaisquer outras situações que representem impedimentos espaciais. Todo esse processo fornece ao entregador a melhor trajetória em tempo real. Logo, em questão de segundos, a rota devidamente planejada pela aplicação, com possível intervenção do usuário administrador para melhoria, será apresentada para o motoboy em seu \textit{smartphone}.\\
 
-\textbf{Palavras-chave}: Delivery. Geolocalização. Google Maps. Aplicação Web.
+\textbf{Palavras-chave}: \textit{Delivery}. Geolocalização. Google Maps. Aplicação Web.
 
 \end{SingleSpacing}
 \end{resumo}
