--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -13,7 +13,7 @@ Esta Seção apresenta os softwares utilizados na etapa de codificação da apli
     \item Composer: gerenciador de pacotes em nível de aplicativo, que fornece um formato padrão para gerenciar dependências de software PHP e bibliotecas necessárias;
     \item Cmder: console para execução de linhas de comandos para o sistema operacional Windows. Com essa ferramenta é possível executar comandos Unix diretamente no Windows;
     \item Laravel: \textit{framework} de programação baseada na linguagem PHP;
-    \item Artisan CLI: interface de linha de comando incluída no Laravel, fornecendo vários comandos úteis durante a criação da aplicação, por exemplo: configuração de ambiente, verificar rotas, interagir com a aplicação e criar diversos tipos de arquivos (\textit{Migrations}, \textit{Controllers} e \textit{Models});
+    \item Artisan CLI: interface de linha de comando incluída no Laravel, fornecendo vários comandos úteis durante a criação da aplicação, por exemplo: configuração de ambiente, verificar rotas, interagir com a aplicação e criar diversos tipos de arquivos (\textit{migrations}, \textit{controllers} e \textit{models});
     \item Blade: ferramenta para criação de interfaces gráficas, utilizado pelo Laravel como uma ferramenta de \textit{template}, trazendo uma quantidade grande de funcionalidades que ajudam na criação de interfaces interativas;
     \item Eloquent ORM: ferramenta com funcionalidades que facilitam a inserção, atualização, busca e exclusão de registros diretamente no banco de dados;
     \item XAMPP: servidor independente de plataforma, que inclui: Apache, MySQL, phpMyAdmin, FileZilla FTP Server, OpenSSL, PHP e Perl;
@@ -23,7 +23,7 @@ Esta Seção apresenta os softwares utilizados na etapa de codificação da apli
 \end{itemize}
 
 \newpage
-Para o desenvolvimento deste trabalho, foi escolhido trabalhar com Laravel 5.8.11, um \textit{framework} com um servidor interno já incluso e invocado através do comando \textit{php artisan serve}, em conjunto com o XAMPP, o que facilita e agiliza o desenvolvimento. Como o conteúdo estará armazenado na rede local, o acesso aos arquivos é realizado instantaneamente, ficando disponível no endereço \textit{http://127.0.0.1}.
+Para o desenvolvimento deste trabalho, foi escolhido trabalhar com Laravel 5.8.11, um \textit{framework} com um servidor interno já incluso e invocado através do comando \textit{php artisan serve}, em conjunto com o XAMPP, o que facilita e agiliza o desenvolvimento. Como o conteúdo estará armazenado na rede local, o acesso aos arquivos é realizado instantaneamente, disponível no endereço \textit{http://127.0.0.1}.
 
 A execução do comando \textit{composer create-project --prefer-dist laravel/laravel delivery-routes} no Cmder gera, de forma padronizada, toda a estrutura de um projeto Laravel, apresentada na \autoref{fig:base-projeto}. O uso do Cmder torna o desenvolvimento, via terminal, do sistema operacional Windows mais amigável. Uma vez que esta ferramenta possibilita a execução de comandos Unix em ambiente Microsoft.
 
@@ -39,9 +39,9 @@ A montagem do ambiente de desenvolvimento para deixa-lo funcional no \textit{fra
 
 Foi optado, por questões de controle de versionamento do projeto, hospedar o código-fonte do projeto em nuvem, através da plataforma GitHub. A sincronia entre os arquivos locais e o GitHub foi possível com o auxílio do sistema de controle de versões chamado Git, representado visualmente pelo Sourcetree, que deixa o trabalho braçal por linha de comando (\textit{gitbash}) de lado, sendo também necessário sua instalação e configuração na máquina de desenvolvimento. 
 
-O banco de dados escolhido para armazenar os registros foi o MySQL, cuja instalação e configuração ocorreu automaticamente pelo XAMPP. Por último, para ter acesso a manipulação do código, um editor de texto era necessário, optando-se pelo PHPStorm. Esta, uma IDE paga, mas utilizando o e-mail acadêmico da URI, obtive a licença estudantil, terminando assim a fase configuração de ambiente de desenvolvimento e garantindo aptidão para começar os trabalhos.
+O banco de dados escolhido para armazenar os registros foi o MySQL, cuja instalação e configuração ocorreu automaticamente pelo XAMPP. Por fim, para ter acesso à manipulação do código, um editor de texto é necessário. No caso descrito, optou-se pelo PHPStorm (IDE paga, mas que, por meio do e-mail acadêmico da URI, foi obtida a licença estudantil), terminando assim a fase configuração de ambiente de desenvolvimento e garantindo aptidão para começar os trabalhos.
 
-O próximo passo foi a modelagem dos dados, onde verificou-se que seria necessário a criação das seguintes tabelas com o recurso \textit{Migration}: \textit{users}, \textit{motoboys}, \textit{deliveries}, \textit{payments} e \textit{orders}. Uma sexta tabela chamada de \textit{deliveries\_orders} precisou ser criada para vincular mais de um pedido à cada entrega, onde uma \textit{trigger}, disparada via \textit{after update}, ficou responsável pela atualização do status de cada pedido vinculado à entrega, esta chamada de \textit{tr\_Status\_Orders}, apresentada no \autoref{alg:trigger}. Na próxima Seção serão abordados os possíveis status de um pedido.
+O próximo passo foi a modelagem dos dados, onde verificou-se que seria necessário a criação das seguintes tabelas com o recurso Migration: \textit{users}, \textit{motoboys}, \textit{deliveries}, \textit{payments} e \textit{orders}. Uma sexta tabela chamada de \textit{deliveries\_orders} precisou ser criada para vincular mais de um pedido à cada entrega, onde uma \textit{trigger}, disparada via \textit{after update}, ficou responsável pela atualização do status de cada pedido vinculado à entrega, esta chamada de \textit{tr\_Status\_Orders}, apresentada no \autoref{alg:trigger}. Na próxima Seção serão abordados os possíveis status de um pedido.
 
 \begin{lstlisting}[caption={Delivery Routes - Trigger tr\_Status\_Orders}, label=alg:trigger, style=SQL]
 CREATE TRIGGER tr_Status_Orders AFTER UPDATE ON `deliveries`
