--- a/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
@@ -1,4 +1,4 @@
-O modelo solicitado para integração via requisição \textit{GET} na rota \textit{“/orders/opened”} na API do software principal do estabelecimento é exemplificado na \autoref{fig:drPlacedAPI}. O retorno da consulta deve ser em formato JSON, dispostos no formato “chave”: “valor” e contendo os seguinte atributos documentados pelo administrador: \textit{id}, \textit{latitude}, \textit{longitude}, \textit{payment\_id}, \textit{totalPrice}, \textit{prepaid} e status.
+O modelo solicitado para integração via requisição \textit{GET} na rota \textit{“/orders/opened”} na API do software principal do estabelecimento é exemplificado na \autoref{fig:drPlacedAPI}. O retorno da consulta deve ser em formato JSON, dispostos no formato “chave”: “valor” e contendo os seguinte atributos documentados pelo administrador: \textit{id}, \textit{latitude}, \textit{longitude}, \textit{payment\_id}, \textit{totalPrice}, \textit{prepaid} e \textit{status}.
 
 \begin{figure}[H]
     \centering
